// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Component Renders Loading 1`] = `
<div
  class="loading"
>
  <h1>
    loading...
  </h1>
</div>
`;

exports[`Loading Component Renders only loading 1`] = `
<div
  class="loading"
>
  <h1>
    loading...
  </h1>
</div>
`;

exports[`Meal Reducer Should return default state 1`] = `
Object {
  "myMeals": Array [],
}
`;

exports[`Meal Reducer Should return new state if action type is recieved 1`] = `
Object {
  "myMeals": Object {},
}
`;
